# RAGE-DEMOHACKATON

./: .env.example  .gitignore  AGENTS.md  README.md  REPORT.md  pyproject.toml  requirements.txt
docs/: contexto-handoff.md  owasp-y-estado-del-arte.md
docs/prompts/: track-b-rag-kb.md
rage_bench/: __init__.py  cli.py  dataset.py  evaluator.py  report.py  runner.py  schema.py
rage_bench/data/: attacks.json
rage_bench/models/: __init__.py  anthropic_provider.py  base.py  mock.py  openai_provider.py
tests/: test_dataset.py  test_evaluator.py  test_mock_model.py  test_runner_report.py
