[project]
name = "rage-bench"
version = "0.1.0"
description = "RAGE jailbreak / prompt-injection vulnerability benchmark harness"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
anthropic = ["anthropic>=0.34.0"]
dev = ["pytest>=8.0.0", "ruff>=0.5.0"]

[project.scripts]
rage-bench = "rage_bench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rage_bench*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
